# lenny-collision

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
source/: CMakeLists.txt
source/apps/: CMakeLists.txt
source/apps/CollisionApp/: CMakeLists.txt
source/apps/CollisionApp/include/: CollisionApp.h
source/apps/CollisionApp/src/: CollisionApp.cpp
source/apps/CollisionTest/: CMakeLists.txt  main.cpp
source/apps/CollisionTest/include/: CollisionTest.h
source/apps/helpers/include/: EulerAngleRigidBodyParent.h
source/apps/helpers/src/: EulerAngleRigidBodyParent.cpp
source/collision/: CMakeLists.txt
source/collision/include/lenny/collision/: Api.h  Box.h  Capsule.h  DistanceCalculator.h  ParameterConstraint.h  Parent.h  Primitive.h  Primitives.h  Rectangle.h  RegularizerObjective.h  Solver.h  Sphere.h  TotalObjective.h
source/collision/src/: Api.cpp  Box.cpp  Capsule.cpp  DistanceCalculator.cpp  ParameterConstraint.cpp  Parent.cpp  Primitive.cpp  Primitives.cpp  Rectangle.cpp  RegularizerObjective.cpp  Solver.cpp  Sphere.cpp  TotalObjective.cpp
